# opengl_rust

./: Cargo.toml  README.md
src/: main.rs  mesh.rs  meshes.rs  notes.txt  shader.rs  shaders.rs  texture.rs
src/shaders/: colour.vert  colour_and_texture.frag  colour_and_texture.vert  input_colour.frag  input_colour.vert  mvp.vert  mvp_texture.vert  offset.vert  orange.frag  texture.frag  transform.vert  uniform_colour.frag  upside_down.vert  yellow.frag
