[package]
name = "opengl_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "^0.14"
glfw = "^0.58"
spng = "0.2.0-alpha.3"
zune-jpeg = "^0.4"
glam = { version = "^0.29", features = ["bytemuck", "fast-math"] }

[profile.release]
strip = "none"

[profile.dev.package.zune-jpeg]
opt-level = 3
